tests/ui/missing_baseline.stderr
error: missing required field `baseline`

       The `baseline` field must be a closure that returns the fixed input
       used for the baseline class.

       Example:
       timing_test! {
       baseline: || [0u8; 32],
       sample: || rand::random::<[u8; 32]>(),
       measure: |input| { ... },
       }
  --> tests/ui/missing_baseline.rs:5:19
   |
 5 |       let _result = timing_test! {
   |  ___________________^
 6 | |         sample: || rand::random::<u8>(),
 7 | |         measure: |input| {
 8 | |             std::hint::black_box(input);
 9 | |         },
10 | |     };
   | |_____^
   |
   = note: this error originates in the macro `timing_test` (in Nightly builds, run with -Z macro-backtrace for more info)
